<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/popup_textView"
        android:padding="@dimen/dimen_10"
        android:text="@string/app_name"
        android:textSize="@dimen/font_size_24"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/popup_delete"
        android:text="@string/delete"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:autoSizeMaxTextSize="@dimen/dimen_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/popup_cancel"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:autoSizeMaxTextSize="@dimen/dimen_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        />

</LinearLayout>